# MCldroid

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/compilesense/liuyi/mcldroid/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: CaffeNet_def.txt  Cifar10_def.txt
app/src/main/cpp/: BitmapProcess.cpp  ComputeTool.cpp  MCLdroidNet.cpp  ModelInput.cpp  logUtil.cpp  native-lib.cpp  utils.cpp
app/src/main/cpp/include/: ActivationLayer.h  ActivationLayerTest.h  BaseLayer.h  BitmapProcess.h  ComputeTool.h  ConvolutionLayer.h  EltwiseLayer.h  FullyConnectedLayer.h  MCLdroidNet.h  ModelInput.h  MultiDimensionData.h  PoolingLayer.h  SoftmaxLayer.h  logUtil.h  utils.h
app/src/main/cpp/layers/: ActivationLayer.cpp  ConvolutionLayer.cpp  EltwiseLayer.cpp  FullyConnectedLayer.cpp  PoolingLayer.cpp  SoftmaxLayer.cpp
app/src/main/cpp/test/: ActivationLayerTest.cpp  ConvolutionLayerTest.cpp.cpp  EltwiseLayerTest.cpp  FullyConnectedLayerTest.cpp  MsgPackTest.cpp  MultiDimensionDataTest.cpp  PoolingLayerTest.cpp  SoftmaxLayerTest.cpp
app/src/main/java/com/compilesense/liuyi/mcldroid/: LogUtile.java  MainActivity.java  NativeTest.java
app/src/main/java/com/compilesense/liuyi/mcldroid/caffecnn/: ConvolutionLayer.java  FullyConnectedLayer.java  Layer.java  NetFile.java
app/src/main/java/com/compilesense/liuyi/mcldroid/mcldroid/: ActivationLayer.java  BaseLayer.java  ConvolutionLayer.java  FullyConnectedLayer.java  Layer.java  MCLdroidNet.java  NetFile.java  PoolingLayer.java  SoftmaxLayer.java
app/src/main/java/com/compilesense/liuyi/mcldroid/messagepack/: ModelInput.java  ParamUnpacker.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/compilesense/liuyi/mcldroid/: ExampleUnitTest.java
